WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244801
MediaStreamTrack isIsolated is not needed
https://bugs.webkit.org/show_bug.cgi?id=244801
Summary
MediaStreamTrack isIsolated is not needed
youenn fablet
Reported
2022-09-05 04:25:54 PDT
MediaStreamTrack isIsolated is not needed
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-09-05 04:27:56 PDT
<
rdar://problem/99565747
>
youenn fablet
Comment 2
2022-09-05 04:30:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/4025
EWS
Comment 3
2022-09-12 16:40:00 PDT
Committed
254415@main
(6a7b744c183b): <
https://commits.webkit.org/254415@main
> Reviewed commits have been landed. Closing PR #4025 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug