MediaStreamTrack isIsolated is not needed https://bugs.webkit.org/show_bug.cgi?id=244801 rdar://problem/99565747

Reviewed by Eric Carlson.

We can remove isIsolated support since it was never fully implemented and never shipped anywhere.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::didPassCORSAccessCheck const):
* Source/WebCore/platform/mediastream/MediaStreamTrackPrivate.cpp:
(WebCore::MediaStreamTrackPrivate::clone):
* Source/WebCore/platform/mediastream/MediaStreamTrackPrivate.h:
* Source/WebCore/platform/mediastream/RealtimeMediaSource.h:

Canonical link: https://commits.webkit.org/254415@main