Source/WebCore/platform/mediastream/MediaStreamTrackPrivate.h
@@ -82,8 +82,6 @@ public:
     void stopProducingData() { m_source->stop(); }
     bool isProducingData() { return m_source->isProducingData(); }
 
-    bool isIsolated() const { return m_source->isIsolated(); }
-
     bool muted() const;
     void setMuted(bool muted) { m_source->setMuted(muted); }
 
